Fixed queued songs being 2% too large

--- a/less/stylesheets/sections/sidebar.less
+++ b/less/stylesheets/sections/sidebar.less
@@ -107,7 +107,7 @@
   text-align: initial;
   height: 27vh;
   & .song{
-    width: 95.8%; //Kill me
+    width: 93.8%; //Kill me
   }
 }
 .queueControls{
